简易HashTable